js for hamburger added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIRST GITHUB Page</title>
+    
 </head>
 <link rel="stylesheet" href="style.css">
+<script type="text/javascript" src="E:\GITHUB\burger.js"></script>
 <body>
+    <p id="burgerDiv"></p>
     <div class="firstDiv">
-        <p>This is the first paragraph in GITHUB</p>
+        <p>This is the first paragraph in GITHUBBBB</p>
     </div>
     
     <div class="secondDiv">
