Hamburger2 file added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FIRST GITHUB Page</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="Hamburger2.js"></script>
 <body>
     <div class="firstDiv">
         <p>This is the first paragraph in GITHUB</p>
@@ -14,6 +15,9 @@
     <div class="secondDiv">
         <p>This is the second paragraph in the GITHUB.</p>
     </div>
+    <label> 
+        <input type="button" onclick=jsjs() value="Click ME">
+    </label>
     
     
 </body>
