Confirm event added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FIRST GITHUB Page</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="jsfile2.js"></script>
 <body>
     <div class="firstDiv">
         <p>This is the first paragraph in GITHUB</p>
