Prompt messgae added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 <script src="jsfile2.js"></script>
+<script src="Prompt.js"></script>
 
 <body>
     <p id="burgerDiv"></p>
@@ -25,10 +26,9 @@
     <div class="secondDiv">
         <p>This is the second paragraph in the GITHUB.</p>
     </div>
-    <label> 
-        <input type="button" onclick=jsjs() value="Click ME">
-    </label>
-    
+
+    <button onclick="jsjs()">Click Me</button>
+    <p id="demo"></p>
     
 </body>
 </html>
