third paragraph added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="secondDiv">
         <p>This is the second paragraph in the GITHUB.</p>
     </div>
+    <div class="thirdDiv">
+        <p>This is the third paragrapg in GITHUB</p>
+    </div>
 
     <button onclick="jsjs()">Click Me</button>
     <p id="demo"></p>
