--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="Prompt.js"></script>
 
 <body>
+    <img src="\GITHUB\img\blurcolordnt.png">
     <p id="burgerDiv"></p>
     <div class="firstDiv">
         <p>This is the first paragraph in GITHUBBBB</p>
