--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="Prompt.js"></script>
 
 <body>
-    <img src="\GITHUB\img\blurcolordnt.png">
+    <img src="\img\final.png" width="700rem" height="400rem">
     <p id="burgerDiv"></p>
     <div class="firstDiv">
         <p>This is the first paragraph in GITHUBBBB</p>
